--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@fontsource/poppins": "^5.1.1",
         "@tailwindcss/typography": "^0.5.16",
+        "easyzoom": "^2.6.0",
         "swiper": "^11.2.4",
         "tom-select": "^2.4.3"
     }
